# kernel-whisper

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/profiler/: Cargo.toml
crates/profiler/src/: lib.rs  native.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tracer/: Cargo.toml
crates/tracer/ebpf/: build-ebpf.sh  kernelwhisper.bpf.c
crates/tracer/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  playbook.rs
crates/ui-wasm/: Cargo.toml
crates/ui-wasm/src/: lib.rs
crates/ui-wasm/www/: app.js  index.html  styles.css
