[package]
name = "kw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
kw-engine = { path = "../engine" }
kw-tracer = { path = "../tracer", features = ["mock"] }
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
