[package]
name = "kw-tracer"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["mock"]
mock = []
ebpf = ["dep:aya"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
kw-types = { path = "../types" }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
aya = { version = "0.13", optional = true }
